--- a/app/src/main/res/layout/fragment_diary_entries.xml
+++ b/app/src/main/res/layout/fragment_diary_entries.xml
@@ -3,13 +3,12 @@
                                                    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
-                                                   tools:context=".ViewEntryFragment" android:id="@+id/viewEntryLayout">
-    <ImageView
-            android:src="@android:color/white"
+                                                   tools:context=".diaryentries.DiaryEntriesFragment"
+                                                   android:id="@+id/diaryEntriesLayout">
+    <androidx.recyclerview.widget.RecyclerView
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:scaleType="centerCrop"
-            android:id="@+id/viewImageView" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/diaryEntriesRecyclerView" tools:listitem="@layout/text_list_item"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
