--- a/app/src/main/res/layout/fragment_entry_list.xml
+++ b/app/src/main/res/layout/fragment_entry_list.xml
@@ -3,7 +3,7 @@
                                                    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
-                                                   tools:context=".diaryentries.DiaryEntriesFragment"
+                                                   tools:context=".diaryentries.EntryListFragment"
                                                    android:id="@+id/diaryEntriesLayout">
     <androidx.recyclerview.widget.RecyclerView
             android:layout_width="0dp"
