--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,6 +14,6 @@
         <action android:id="@+id/action_diaryFragment_to_createEntry" app:destination="@id/createEntry"/>
         <action android:id="@+id/action_diaryFragment_to_editEntryFragment" app:destination="@id/editEntryFragment"/>
     </fragment>
-    <fragment android:id="@+id/editEntryFragment" android:name="com.zdgeier.ourdiary.EditEntryFragment"
+    <fragment android:id="@+id/editEntryFragment" android:name="com.zdgeier.ourdiary.editentry.EditEntryFragment"
               android:label="fragment_edit_entry" tools:layout="@layout/fragment_edit_entry"/>
 </navigation>
